--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,5 @@
 @article{xia2022comprehensive,
+  abbr={TPDS},
   title={A Comprehensive Performance Model of Sparse Matrix-Vector Multiplication to Guide Kernel Optimization},
   author={Xia, Tian and Fu, Gelin and Li, Chenyang and Luo, Zhongpei and Zhang, Lucheng and Chen, Ruiyang and Zhao, Wenzhe and Zheng, Nanning and Ren, Pengju},
   journal={IEEE Transactions on Parallel and Distributed Systems},
@@ -6,5 +7,6 @@
   number={2},
   pages={519--534},
   year={2022},
-  publisher={IEEE}
+  publisher={IEEE},
+  selected={true}
 }
