update profile for first-year

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,3 +10,12 @@
   publisher={IEEE},
   selected={true}
 }
+
+@inproceedings{2024HPCA,
+  abbr={HPCA},
+  title={Differential-Matching Prefetcher for Indirect Memory Access},
+  author={Fu, Gelin and Xia, Tian and Luo, Zhongpei and Chen, Ruiyang and Zhao, Wenzhe and Ren, Pengju},
+  booktitle={The 30-th IEEE International Symposium on High-Performance Computer Architecture (HPCA)},
+  year={2024},
+  selected={true}
+}
